--- a/library-service/src/main/resources/application.yml
+++ b/library-service/src/main/resources/application.yml
@@ -14,11 +14,12 @@ spring:
       ddl-auto: create-drop
 
 server:
-  port: 8081
+  port: 0
 
 eureka:
   instance:
     prefer-ip-address: true
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     service-url:
       default-zone: ${EUREKA_URI:http://localhost:8761/eureka}
