--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -28,6 +28,9 @@ eureka:
   instance:
     prefer-ip-address: true
 
-
-
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+        exclude: info
