--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -29,8 +29,21 @@ eureka:
     prefer-ip-address: true
 
 management:
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411
+      connect-timeout: 5000
+  tracing:
+    sampling:
+      probability: 1.0
   endpoints:
     web:
       exposure:
         include: "*"
         exclude: info
+
+
+
+
+
+
