--- a/library-service/src/main/resources/application.yml
+++ b/library-service/src/main/resources/application.yml
@@ -23,3 +23,11 @@ eureka:
   client:
     service-url:
       default-zone: ${EUREKA_URI:http://localhost:8761/eureka}
+management:
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411
+      connect-timeout: 5000
+  tracing:
+    sampling:
+      probability: 1.0
