config-server added

--- a/library-service/src/main/resources/application.yml
+++ b/library-service/src/main/resources/application.yml
@@ -13,6 +13,13 @@ spring:
     hibernate:
       ddl-auto: create-drop
 
+  profiles:
+    default: default
+
+  cloud:
+    config:
+      uri: optional:config-server:http//localhost:8889/
+
 server:
   port: 0
 
