config-server changed

--- a/library-service/src/main/resources/application.yml
+++ b/library-service/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
   cloud:
     config:
       uri: optional:config-server:http//localhost:8889/
+  config:
+    import: optional:config-server:http//localhost:8889/
 
 server:
   port: 0
